--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "astro": "astro"
   },
   "devDependencies": {
-    "astro": "^1.0.1"
+    "@astrojs/mdx": "^0.8.1",
+    "@astrojs/sitemap": "^1.0.0",
+    "@astrojs/tailwind": "^1.0.0",
+    "astro": "^1.0.1",
+    "astro-compress": "^0.0.17",
+    "rollup": "^2.77.2"
   }
 }
