--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/tailwind": "^1.0.0",
     "astro": "^1.0.1",
     "astro-compress": "^0.0.17",
+    "astro-imagetools": "^0.6.10",
     "prettier": "^2.7.1",
     "prettier-plugin-astro": "^0.5.0",
     "rollup": "^2.77.2"
