--- a/package.json
+++ b/package.json
@@ -16,8 +16,14 @@
     "astro": "^1.0.1",
     "astro-compress": "^0.0.17",
     "astro-imagetools": "^0.6.10",
+    "autoprefixer": "^10.4.8",
+    "postcss": "^8.4.16",
     "prettier": "^2.7.1",
     "prettier-plugin-astro": "^0.5.0",
-    "rollup": "^2.77.2"
+    "rollup": "^2.77.2",
+    "tailwindcss": "^3.1.8"
+  },
+  "dependencies": {
+    "flowbite": "^1.5.2"
   }
 }
