--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro build",
+    "build": "astro build && subfont -ir --no-fallbacks --root dist",
     "preview": "astro preview",
     "astro": "astro"
   },
@@ -16,12 +16,14 @@
     "astro": "^1.0.1",
     "astro-compress": "^0.0.17",
     "astro-imagetools": "^0.6.10",
+    "astro-robots-txt": "^0.3.7",
     "autoprefixer": "^10.4.8",
     "flowbite-typography": "^1.0.2",
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
     "prettier-plugin-astro": "^0.5.0",
     "rollup": "^2.77.2",
+    "subfont": "^6.9.0",
     "tailwindcss": "^3.1.8"
   },
   "dependencies": {
