--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   },
   "devDependencies": {
     "@astrojs/mdx": "^0.8.1",
+    "@astrojs/prefetch": "^0.0.7",
     "@astrojs/sitemap": "^1.0.0",
     "@astrojs/tailwind": "^1.0.0",
-    "astro": "^1.0.1",
+    "astro": "^1.0.6",
     "astro-compress": "^0.0.17",
     "astro-imagetools": "^0.6.10",
     "astro-robots-txt": "^0.3.7",
@@ -24,11 +25,20 @@
     "prettier-plugin-astro": "^0.5.0",
     "rollup": "^2.77.2",
     "subfont": "^6.9.0",
-    "tailwindcss": "^3.1.8"
+    "tailwindcss": "^3.1.8",
+    "vite-plugin-pwa": "^0.12.3",
+    "workbox-window": "^6.5.4"
   },
   "dependencies": {
     "@fontsource/montserrat": "^4.5.12",
     "astro-icon": "^0.7.3",
     "flowbite": "^1.5.2"
+  },
+  "pnpm": {
+    "peerDependencyRules": {
+      "ignoreMissing": [
+        "vite"
+      ]
+    }
   }
 }
