degraded astro version

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@astrojs/prefetch": "^0.0.7",
     "@astrojs/sitemap": "^1.0.0",
     "@astrojs/tailwind": "^1.0.0",
-    "astro": "^1.0.6",
+    "astro": "1.0.1",
     "astro-compress": "^0.0.17",
     "astro-critters": "^1.0.1",
     "astro-imagetools": "^0.6.10",
