--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "@fontsource/montserrat": "^4.5.12",
     "astro-icon": "^0.7.3",
+    "astro-seo-meta": "^0.0.2",
     "flowbite": "^1.5.2"
   },
   "pnpm": {
