--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro build  && subfont -ir --no-fallbacks --root dist",
+    "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
