--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   },
   "dependencies": {
     "@fontsource/montserrat": "^4.5.12",
+    "@fontsource/playfair-display": "^4.5.11",
     "astro-icon": "^0.7.3",
     "astro-seo-meta": "^0.0.2",
     "flowbite": "^1.5.2",
