better page descriptions

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "luca-pontrandolfo-website",
-  "short_name": "luca-pontrandolfo-website",
+  "name": "Luca Pontrandolfo Website",
+  "short_name": "Luca Pontrandolfo",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
