--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@swup/head-plugin": "^1.2.1",
     "astro-icon": "^0.7.3",
     "astro-seo-meta": "^0.0.2",
+    "current-device": "^0.10.2",
     "flowbite": "^1.5.2",
     "swup": "^2.0.18"
   },
