--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,12 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@components/*": ["src/components/*"],
+      "@layouts/*": ["src/layouts/*"],
+      "@utils/*": ["src/utils/*"]
+      // "@assets/*": ["src/assets/*"]
+    },
     // Enable top-level await, and other modern ESM features.
     "target": "ESNext",
     "module": "ESNext",
