--- a/package.json
+++ b/package.json
@@ -69,6 +69,9 @@
       "ignoreMissing": [
         "vite"
       ]
+    },
+    "patchedDependencies": {
+      "astro-imagetools@0.6.10": "patches/astro-imagetools@0.6.10.patch"
     }
   }
 }
