--- a/package.json
+++ b/package.json
@@ -27,20 +27,22 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "localhost:expose": "lt --port 3000"
   },
   "devDependencies": {
     "@astrojs/mdx": "^0.8.1",
     "@astrojs/prefetch": "^0.0.7",
     "@astrojs/sitemap": "^1.0.0",
     "@astrojs/tailwind": "^1.0.0",
-    "astro": "1.1.2",
+    "astro": "1.2.1",
     "astro-compress": "^1.0.3",
     "astro-critters": "^1.0.1",
     "astro-imagetools": "^0.6.10",
     "astro-robots-txt": "^0.3.7",
     "autoprefixer": "^10.4.8",
     "flowbite-typography": "^1.0.2",
+    "localtunnel": "^2.0.2",
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
     "prettier-plugin-astro": "^0.5.0",
